--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -11,31 +11,11 @@
     {{ form.as_p }}
 
     <div class="input-field col s12">
-        <select id="user-select">
-            <option value="" disabled selected>Choose your option</option>
-            <option value="is_owner">I am a pet owner</option>
-            <option value="is_sitter">I am a pet sitter</option>
-        </select>
-        <label>User Type</label>
+        <li><a href="{% url 'owners_signup' %}">I'm a pet owner</a></li>
+        <li><a href="{% url 'sitters_signup' %}">I'm a pet sitter</a></li>
     </div>
     
     <input type="submit" class="btn" value="signup">
 </form>
-
-
-
-<script>
-    // create a datepicker
-    // var dateEl = document.getElementById('id_date');
-    // M.Datepicker.init(dateEl, {
-        //   format: 'yyyy-mm-dd',
-        //   defaultDate: new Date(),
-        //   setDefaultDate: true,
-        //   autoClose: true
-        // });
-        // initialize the meal select
-        const selectEl = document.querySelectorAll('select');
-        M.FormSelect.init(selectEl);
-    </script>
   
-  {% endblock %}
+{% endblock %}
