--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,6 +21,8 @@
           <li><a href="/about">About</a></li>
           {% if user.is_authenticated %}
             <li><a href="/posts">View All Petcations</a></li>
+            <li><a href="{% url 'owners_create' %}">Create Pet Owner Profile</a></li>
+            <li><a href="{% url 'sitters_create' %}">Create Pet Sitter Profile</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
             <li><a href="{% url 'login' %}">Log In</a></li>
