style home page and move html main tag outside of base.html and into all files

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
+<main class="container">
     <h1>About Petcation</h1>
     <hr />
     <p>Providing love and care for all your best friends</p>
+
+</main>
 
 {% endblock %}
