--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
+<main class="home-container">
+  <div id="home-background">
+    <div class="center-align home-page">
+      <h3>Providing love and care for <strong>ALL</strong> your <span style="color: rgb(244, 74, 9)">BEST FRIENDS</span></h3>
+    </div>
+  </div>
 
-<h1>Home</h1>
+</main>
+
 
 {% endblock %}
