--- a/main_app/templates/main_app/owner_form.html
+++ b/main_app/templates/main_app/owner_form.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-
 {% block content %}
-    <h1>Create a Pet Owner Profile</h1>
+<main class="container">
+
+  <h1>Create a Pet Owner Profile</h1>
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
   <form action="" method="post">
     <!-- Django requires the following for security purposes -->
@@ -12,4 +13,5 @@
     </table>
     <input type="submit" value="Submit!" class="btn">
   </form>
+</main>
 {% endblock %}
