--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
+<main class="container">
 
-<h1>Log In</h1>
-
-<form method="post" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" class="btn" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
-
-
-</form>
+    <h1>Log In</h1>
+    
+    <form method="post" action="">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" class="btn" value="login">
+        <input type="hidden" name="next" value="{{ next }}">
+    
+    
+    </form>
+</main>
 
 {% endblock %}
