--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
-
 {% block content %}
+<main class="container">
 
-<h1>Sign Up</h1>
-{% if error_message %}<p class="red-text">{{ error_message }}</p>{% endif %}
-    <form action="{% url 'signup' %}" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" class="btn" value="signup">
-    </form>
+    <h1>Sign Up</h1>
+    {% if error_message %}<p class="red-text">{{ error_message }}</p>{% endif %}
+        <form action="{% url 'signup' %}" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn" value="signup">
+        </form>
+</main>
    
 {% endblock %}
