--- a/main_app/templates/sitters/index.html
+++ b/main_app/templates/sitters/index.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
+<main class="container">
 
-<h1> Pet Sitter List</h1>
-
-{% for sitter in sitters %}
-    <div class="card">
-        <div class="card-content">
-            <p>{{ sitter.first_name }} is a pet sitter</p>
+    <h1> Pet Sitter List</h1>
+    
+    {% for sitter in sitters %}
+        <div class="card">
+            <div class="card-content">
+                <p>{{ sitter.first_name }} is a pet sitter</p>
+            </div>
         </div>
-    </div>
-  </a>
+      </a>
+</main>
 {% endfor %}
 
 {% endblock %}
