--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -25,7 +25,7 @@ nav {
 
 #home-background {
     background-image: url("https://c4.wallpaperflare.com/wallpaper/378/85/136/dog-pug-funny-canine-wallpaper-preview.jpg");
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     height: auto;
@@ -36,6 +36,7 @@ nav {
     height: 700px;
     width: 50%;
 }
+
 .home-container {
     width: 100%;
 }
@@ -45,3 +46,4 @@ nav {
     padding: 80px;
     width: 500px;
 }
+
