functional links to nav

--- a/main_app/templates/sitters/index.html
+++ b/main_app/templates/sitters/index.html
@@ -7,6 +7,7 @@
     <div class="card">
         <div class="card-content">
             <p>{{ sitter.first_name }} is a pet sitter</p>
+            <a href="/sitters/{{sitter.id}}">My profile</a>
         </div>
     </div>
   </a>
