--- a/main_app/templates/owners/index.html
+++ b/main_app/templates/owners/index.html
@@ -7,6 +7,7 @@
     <div class="card">
         <div class="card-content">
             <p>{{ owner.first_name }} is a pet owner</p>
+            <a href="/owners/{{owner.id}}">My profile</a>
         </div>
     </div>
   </a>
