--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <main class="container">
+  
   <h1>Welcome {{ owner.first_name }}</h1>
   <div class="row">
     <div class="card small">
@@ -23,8 +24,29 @@
     <a href="{% url 'owners_update' owner.id %}">Edit</a>
     <a href="{% url 'owners_delete' owner.id %}">Delete</a>
   </div>
+
+  <h3>Pet List</h3>
+  
+  {% for pet in owner.pet_set.all %}
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">{{ pet.name }}</span>
+            <p>Type: {{ pet.pet_type }}</p>
+            <p>Breed: {{ pet.breed }}</p>
+            <p>Age: {{ pet.age }}</p>
+            <p>Gender: {{ pet.gender }}</p>
+        </div>
+    </div>
+  {% endfor %}
+  </div>
+  <div class="col s6">
+    <form action="{% url 'add_pet' owner.id %}" method="post">
+      {% csrf_token %}
+      {{ pet_form.as_p }}
+      <input type="submit" class="btn" value="Add Pet">
+    </form>
+  </div>
+
+
 </main>
-
-
-
 {% endblock %}
