--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -40,11 +40,7 @@
   {% endfor %}
   </div>
   <div class="col s6">
-    <form action="{% url 'add_pet' owner.id %}" method="post">
-      {% csrf_token %}
-      {{ pet_form.as_p }}
-      <input type="submit" class="btn" value="Add Pet">
-    </form>
+    <a href="{% url 'pets_create' owner.id %}">Add Pet</a>
   </div>
 
 
