--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -2,10 +2,9 @@
 {% block content %}
 <main class="container">
 
-  <h1>Welcome {{ sitter.first_name }} </h1>
   
   <div class="row">
-    <div class="card small">
+    <div class="col s6 card small">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">PROFILE PHOTO</span>
@@ -14,19 +13,20 @@
     </div>
   </div>
   
-  
-  <div class="card">
-    <div class="card-content">
-      <p>Name: {{ sitter.first_name }}</p>
-      <p>Location: {{ sitter.city }}</p>
-      <p>Sit Count: {{ sitter.sit_count }}</p>
-      <p>Pet Experience: {{ sitter.pet_experience }}</p>
-      <p>About: {{ sitter.about }}</p>
+  <div class="row">
+    <div class="col s6 card">
+      <div class="card-content">
+        <p>Name: {{ sitter.first_name }}</p>
+        <p>Location: {{ sitter.city }}</p>
+        <p>Sit Count: {{ sitter.sit_count }}</p>
+        <p>Pet Experience: {{ sitter.pet_experience }}</p>
+        <p>About: {{ sitter.about }}</p>
+      </div>
+      <div class="card-action">
+        <a href="{% url 'sitters_update' sitter.id %}">Edit</a>
+        <a href="{% url 'sitters_delete' sitter.id %}">Delete</a>
+      </div>
     </div>
-  </div>
-  <div class="card-action">
-    <a href="{% url 'sitters_update' sitter.id %}">Edit</a>
-    <a href="{% url 'sitters_delete' sitter.id %}">Delete</a>
   </div>
 </main>
 
