--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -13,6 +13,22 @@
   </div>
 </div>
 
+<div>
+  {% for photo in sitter.photo_set.all %}
+  <img class="responsive-img card-panel" src="{{photo.url}}">
+  {% empty %}
+    <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+  {% endfor %}
+
+  <form action="{% url 'add_photo' sitter.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+    {% csrf_token %}
+    <input type="file" name="photo-file">
+    <br><br>
+    <input type="submit" class="btn" value="Upload Photo">
+  </form>
+
+</div>
+
 
 <div class="card">
   <div class="card-content">
