--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -8,27 +8,31 @@
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
         <span class="card-title">PROFILE PHOTO</span>
+        <div>
+          {% for photo in sitter.photo_set.all %}
+            <img class="responsive-img card-panel" src="{{photo.url}}" height="100" width="25%">
+          {% empty %}
+            <img src="/static/css/profilePlaceholder.png" height="100" width="25%">
+          {% endfor %}
+
+          <form action="{% url 'add_photo' sitter.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+            {% csrf_token %}
+            <input type="file" name="photo-file">
+            <br><br>
+            <input type="submit" class="btn" value="Upload Photo">
+          </form>
+        </div>
+
       </div>
     </div>
   </div>
 </div>
 
-<div>
-  {% for photo in sitter.photo_set.all %}
-  <img class="responsive-img card-panel" src="{{photo.url}}">
-  {% empty %}
-    <div class="card-panel teal-text center-align">No Photos Uploaded</div>
-  {% endfor %}
-
-  <form action="{% url 'add_photo' sitter.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
-    {% csrf_token %}
-    <input type="file" name="photo-file">
-    <br><br>
-    <input type="submit" class="btn" value="Upload Photo">
-  </form>
-
-</div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <div class="card">
   <div class="card-content">
