--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -13,15 +13,27 @@
       </div>
     </div>
   </div>
+  <div>
+    <iframe
+          width="600"
+          height="450"
+          style="border:0"
+          loading="lazy"
+          allowfullscreen
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
+            &q=Space+Needle,{{sitter.city}}">
+        </iframe> 
+  </div>
   
-  
-  <div class="card">
-    <div class="card-content">
-      <p>Name: {{ sitter.first_name }}</p>
-      <p>Location: {{ sitter.city }}</p>
-      <p>Sit Count: {{ sitter.sit_count }}</p>
-      <p>Pet Experience: {{ sitter.pet_experience }}</p>
-      <p>About: {{ sitter.about }}</p>
+  <div class="row">
+    <div class="card">
+      <div class="card-content">
+        <p>Name: {{ sitter.first_name }}</p>
+        <p>Location: {{ sitter.city }}</p>
+        <p>Sit Count: {{ sitter.sit_count }}</p>
+        <p>Pet Experience: {{ sitter.pet_experience }}</p>
+        <p>About: {{ sitter.about }}</p>
+      </div>
     </div>
   </div>
   <div class="card-action">
