--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -40,16 +40,7 @@
     </div>
   </a>
   {% endfor %}
-  </div>
-  <h3>Add Pet</h3>
-  <!-- Leaving the action empty makes the form post to the same url used to display it -->
-  <div class="col s6">
-    <form action="{% url 'add_pet' owner.id %}" method="post">
-      {% csrf_token %}
-      {{ pet_form.as_p }}
-      <input type="submit" class="btn" value="Add Pet">
-    </form>
-  </div>
+  <a href="{% url 'pets_create' owner.id %}">Add Pet</a>
 </main>
 
 </main>
