--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,13 +25,14 @@
             <li><a href="/posts">View All Petcations</a></li>
 
             {% if user.owner.id %}
-                <li><a href="/owners/{{owner.id}}">All Pet Owners</a></li>
+                <li><a href="{% url 'owners_detail' user.owner.id %}">MY PROFILE</a></li>
             {% else %}
                 <li><a href="{% url 'owners_create' %}">Create Pet Owner Profile</a></li>
+                
             {% endif %}
 
             {% if user.sitter.id %}
-                <li><a href="/sitters/{{sitter.id}}">All Pet Sitters</a></li>
+                <li><a href="{% url 'sitters_detail' user.sitter.id %}">MY PROFILE</a></li>
             {% else %}
                 <li><a href="{% url 'sitters_create' %}">Create Pet Sitter Profile</a></li>
             {% endif %}
