--- a/main_app/templates/owners/pets/detail.html
+++ b/main_app/templates/owners/pets/detail.html
@@ -12,6 +12,7 @@
         <p>Characteristics: {{ pet.characteristics }}</p>
         <p>Care Instructions: {{ pet.care_instructions }}</p>
     </div>
+    <a href="{% url 'pets_update_form' pet.id %}">Edit Pet</a>
   </div>
 
 {% endblock %}
