--- a/main_app/templates/main_app/owner_confirm_delete.html
+++ b/main_app/templates/main_app/owner_confirm_delete.html
@@ -7,10 +7,10 @@
 
   <h4>Are you sure you want to delete <span class="teal-text">{{ object.first_name }}</span>?</h4>
 
-  <form action="" method="POST">
+  <form action="{% url 'owners_delete' owner.id %}" method="POST">
     {% csrf_token %}
     <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'detail' owner.id %}">Cancel</a>
+    <a href="{% url 'owners_detail' owner.id %}">Cancel</a>
   </form>
 </main>
 {% endblock %}
