--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -4,34 +4,35 @@
 <main class="container">
   <h1>Welcome {{ sitter.first_name }} </h1>
 
-<div class="row">
-  <div class="card small">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">PROFILE PHOTO</span>
-        <div>
-          {% for photo in sitter.photo_set.all %}
+  <div class="row">
+    <div class="card small">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">PROFILE PHOTO</span>
+          <div>
+            {% for photo in sitter.photo_set.all %}
             <img class="responsive-img card-panel" src="{{photo.url}}" height="100" width="25%">
-          {% empty %}
+            {% empty %}
             <img src="/static/css/profilePlaceholder.png" height="100" width="25%">
-          {% endfor %}
-          <form action="{% url 'add_photo' sitter.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
-            {% csrf_token %}
-            <input type="file" name="photo-file">
-            <br><br>
-            <input type="submit" class="btn" value="Upload Photo">
-          </form>
+            {% endfor %}
+            <form action="{% url 'add_photo' sitter.id %}" enctype="multipart/form-data" method="POST"
+              class="card-panel">
+              {% csrf_token %}
+              <input type="file" name="photo-file">
+              <br><br>
+              <input type="submit" class="btn" value="Upload Photo">
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div class="row">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="row">
     <div class="col s6 card">
       <div class="card-content">
         <p>Name: {{ sitter.first_name }}</p>
@@ -41,23 +42,17 @@
         <p>About: {{ sitter.about }}</p>
       </div>
       <div>
-        <iframe
-              width="450"
-              height="500"
-              style="border:0"
-              loading="lazy"
-              allowfullscreen
-              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
+        <iframe width="450" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
                 &q=Space+Needle,{{sitter.city}}">
-            </iframe> 
+        </iframe>
       </div>
       <div class="card-action">
         <a href="{% url 'sitters_update' sitter.id %}">Edit</a>
         <a href="{% url 'sitters_delete' sitter.id %}">Delete</a>
       </div>
     </div>
-   
-    </div> -->
+
+  </div>
   </div>
 </main>
 
