--- a/main_app/templates/posts/index.html
+++ b/main_app/templates/posts/index.html
@@ -4,7 +4,7 @@
 <h1>Pets Ready</h1>
 {% for post in posts %}
   <div class="row">
-    <div class="col s12 m10">
+    <div class="col s12">
       <div class="card">
         <div class="card-content">
           <span class="card-title"><h5>pet name or photo</h5></span>
