--- a/main_app/templates/posts/index.html
+++ b/main_app/templates/posts/index.html
@@ -8,7 +8,13 @@
       <div class="col s12 m10">
         <div class="card">
           <div class="card-content">
-            <span class="card-title"><h5>pet name or photo</h5></span>
+            <span class="card-title">
+              <a href="{% url 'owners_detail' user.owner.id %}">
+                <h4>
+                  Pet Owner: {{ post.owner }}
+                </h4>
+              </a>
+            </span>
               <p>Start Date: {{ post.start_date }}</p>
               <p>End Date: {{ post.end_date }}</p>
               <p>Details: {{ post.details }}</p>
