--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -43,6 +43,19 @@
   <a href="{% url 'pets_create' owner.id %}">Add Pet</a>
   <br>
 
+  <h4>Pet Photos:</h4>
+  {% for photo in owner.photo_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+  {% empty %}
+    <div class="card-panel teal-text center-align">No Pet Photos</div>
+  {% endfor %}
+  <form action="{% url 'add_photo' owner.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+    {% csrf_token %}
+    <input type="file" name="photo-file">
+    <br><br>
+    <input type="submit" class="btn" value="Upload Photo">
+  </form>
+  
   
 
 </main>
