--- a/main_app/templates/posts/index.html
+++ b/main_app/templates/posts/index.html
@@ -9,7 +9,6 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">
-              <a href="{% url 'owners_detail' user.owner.id %}">
                 <h4>
                   Pet Owner: {{ post.owner }}
                 </h4>
@@ -19,8 +18,20 @@
               <p>End Date: {{ post.end_date }}</p>
               <p>Details: {{ post.details }}</p>
           </div>
-          <div class="card-action">
-            <a href="#">This is a link</a>
+          <div class="card-action">   
+            <h4>Interested Sitters:</h4>
+            <!-- Leaving the action empty makes the form post to the same url used to display it -->
+            <form action="{% url 'show_interest' post.id %}" method="post">
+            <!-- Django requires the following for security purposes -->
+              {% csrf_token %}
+              {{ show_interest_form.as_p }}
+            <table>
+              <!-- Render the inputs inside of <tr>s & <td>s -->
+              {{ form.as_table }}
+            </table>
+            <input type="submit" value="I'm Interested!" class="btn">
+          </form>
+            
           </div>
         </div>
       </div>
