user can add photos to their profile for petcation experience

--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -6,7 +6,7 @@
 
   
   <div class="row">
-    <div class="col s6 card">
+    <div class="col s12 card">
       <div class="card-content">
         <p>Name: {{ sitter.first_name }}</p>
         <p>Location: {{ sitter.city }}</p>
@@ -14,20 +14,29 @@
         <p>Pet Experience: {{ sitter.pet_experience }}</p>
         <p>About: {{ sitter.about }}</p>
       </div>
-      <div>
-        <iframe width="450" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
-                &q=Space+Needle,{{sitter.city}}">
-        </iframe>
-      </div>
       <div class="card-action">
         <a href="{% url 'sitters_update' sitter.id %}">Edit</a>
         <a href="{% url 'sitters_delete' sitter.id %}">Delete</a>
       </div>
     </div>
-
+    <iframe width="450" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
+            &q=Space+Needle,{{sitter.city}}">
+    </iframe>
   </div>
+  <div>
+    <h5>Sitter Petcation Photos:</h5>
+    {% for photo in sitter.sitterphoto_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+    {% empty %}
+      <div class="card-panel teal-text center-align">Add pictures of your Petcation experience</div>
+    {% endfor %} 
+    <form action="{% url 'add_sitter_photo' sitter.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+      {% csrf_token %}
+      <input type="file" name="photo-file">
+      <br><br>
+      <input type="submit" class="btn" value="Upload Photo">
+  </form>
   </div>
-</main>
 
 
 {% endblock %}
