--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -10,11 +10,18 @@
         <p>Location: {{ owner.city }}</p>
         <p>About: {{ owner.about }}</p>
       </div>
-      <div class="card-action">
-        <a href="{% url 'owners_update' owner.id %}">Edit</a>
-        <a href="{% url 'owners_delete' owner.id %}">Delete</a>
-      </div>
+      {% if user.owner.id %}
+        <div class="card-action">
+          <a href="{% url 'owners_update' owner.id %}">Edit</a>
+          <a href="{% url 'owners_delete' owner.id %}">Delete</a>
+        </div>
+      {% endif %}
     </div>
+  </div>
+  <div>
+    <iframe width="450" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
+            &q=Space+Needle,{{sitter.city}}">
+    </iframe>
   </div>
 
   
@@ -32,21 +39,26 @@
     </div>
   </a>
   {% endfor %}
-  <a href="{% url 'pets_create' owner.id %}">Add Pet</a>
+  {% if user.owner.id %}
+    <a href="{% url 'pets_create' owner.id %}">Add Pet</a>
+  {% endif %}
   <br>
 
   <h4>Pet Photos:</h4>
   {% for photo in owner.photo_set.all %}
-      <img class="responsive-img card-panel" src="{{photo.url}}">
+      
+    <img class="responsive-img card-panel" src="{{photo.url}}">
   {% empty %}
     <div class="card-panel teal-text center-align">No Pet Photos</div>
   {% endfor %}
-  <form action="{% url 'add_photo' owner.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
-    {% csrf_token %}
-    <input type="file" name="photo-file">
-    <br><br>
-    <input type="submit" class="btn" value="Upload Photo">
-  </form>
+  {% if user.owner.id %}
+    <form action="{% url 'add_photo' owner.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+      {% csrf_token %}
+      <input type="file" name="photo-file">
+      <br><br>
+      <input type="submit" class="btn" value="Upload Photo">
+    </form>
+  {% endif %}
   
   
 
