--- a/main_app/templates/owners/pets/detail.html
+++ b/main_app/templates/owners/pets/detail.html
@@ -12,10 +12,12 @@
         <p>Characteristics: {{ pet.characteristics }}</p>
         <p>Care Instructions: {{ pet.care_instructions }}</p>
     </div>
-    <div class="card-action">
-      <a href="{% url 'pets_update' pet.id %}">Edit</a>
-      <a href="{% url 'pets_delete' pet.id %}">Delete</a>
-    </div>
+    {% if user.owner.id %}
+      <div class="card-action">
+        <a href="{% url 'pets_update' pet.id %}">Edit</a>
+        <a href="{% url 'pets_delete' pet.id %}">Delete</a>
+      </div>
+    {% endif %}
   </div>
 </main>
 
