create a post details page and fix layout of cards on post index

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -48,3 +48,14 @@ nav {
 }
 
 /* Style Owner Profile Page */
+
+
+/* Style Petcations */
+.flex-display {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.petcation-card {
+    margin: 10px;
+}
