--- a/main_app/templates/posts/index.html
+++ b/main_app/templates/posts/index.html
@@ -3,37 +3,24 @@
 
 <main class="container">
   <h1>Pets Ready</h1>
+  <div class="flex-display">
   {% for post in posts %}
-    <div class="row">
-      <div class="col s12 m10">
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">
-              <a href="{% url 'owners_detail' post.owner.id %}">
-                <h4>
-                  Pet Owner: {{ post.owner }}
-                </h4>
-              </a>
-            </span>
-              <p>Start Date: {{ post.start_date }}</p>
-              <p>End Date: {{ post.end_date }}</p>
-              <p>Details: {{ post.details }}</p>
-          </div>
-          <div class="card-action">   
-            <h4>Interested Sitters:</h4>
-            <!-- Leaving the action empty makes the form post to the same url used to display it -->
-            <form action="" method="post">
-            <!-- Django requires the following for security purposes -->
-              {% csrf_token %}
-              {{ show_interest_form }}
-              <input type="checkbox" value="I'm Interested!" name="interested">
-            </form>
-            
-          </div>
+    <a href="{% url 'posts_detail' post.id %}">
+      <div class="card petcation-card">
+        <div class="card-content">
+          <span class="card-title">             
+              <h5 class="center-align">
+                Pet Owner: {{ post.owner }}
+              </h5>
+          </span>
+          <p>Start Date: {{ post.start_date }}</p>
+          <p>End Date: {{ post.end_date }}</p>
         </div>
       </div>
-    </div> 
+    </a>
     {% endfor %}
+  </div>
+
 </main>
 
 {% endblock %}
