--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -16,23 +16,28 @@
             <p>Start Date: {{ post.start_date }}</p>
             <p>End Date: {{ post.end_date }}</p>
             <p>Details: {{ post.details }}</p>
+          </div>
+        {% if user.owner.id %}
+        <div class="card-action">
+          <a href="{% url 'posts_update' post.id %}">Edit</a>
+          <a href="{% url 'posts_delete' post.id %}">Delete</a>
         </div>
-        <div class="card-action">   
-          <h4>Interested Sitters:</h4>
-          <!-- Leaving the action empty makes the form post to the same url used to display it -->
-          <form action="" method="post">
-          <!-- Django requires the following for security purposes -->
-            {% csrf_token %}
-              {{ show_interest_form.as_p }}
-            <br>
-            <input type="checkbox" name="is_interested" {% if show_interest_form.is_interested.value %}checked{% endif %} />
-            <input type="submit" value="Interested!" class="btn">
-          </form>
-          
-        </div>
+        {% endif %}
       </div>
     </div>
   </div> 
+  <div class="card-action">   
+    <h4>Interested Sitters:</h4>
+    <!-- Leaving the action empty makes the form post to the same url used to display it -->
+    <form action="" method="post">
+    <!-- Django requires the following for security purposes -->
+      {% csrf_token %}
+        {{ show_interest_form.as_p }}
+      <br>
+      <input type="checkbox" name="is_interested" {% if show_interest_form.is_interested.value %}checked{% endif %} />
+      <input type="submit" value="Interested!" class="btn">
+    </form>    
+  </div>
 
 </main>
 {% endblock %}
