--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -32,7 +32,19 @@
     <form action="" method="post">
     <!-- Django requires the following for security purposes -->
       {% csrf_token %}
-        {{ show_interest_form.as_p }}
+        {# {{ show_interest_form.as_p }} #}
+
+        {{ form.non_field_errors }}
+        {{ form.source.errors }}
+        {{ form.source }}
+        <p>
+          <label>
+            <input type="checkbox" />
+            {{ form.is_interested.errors }}
+            {{ form.is_interested }}
+            <span>is_interested </span>
+          </label>
+        </p>
       <br>
       <input type="checkbox" name="is_interested" {% if show_interest_form.is_interested.value %}checked{% endif %} />
       <input type="submit" value="Interested!" class="btn">
