--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -2,14 +2,16 @@
 {% block content %}
 
 <main class="container">
-  <h1>Welcome {{ sitter.first_name }} </h1>
-  <div>
-    <h5>Profile Picture:</h5>
+  <br>
+  <div class="col s12" style="text-align: center;">
     {% for profilepic in sitter.sitterprofile_set.all %}
-      <img class="responsive-img card-panel" src="{{profilepic.url}}">
+      <img class="circle responsive-img" style="max-width: 200px; max-height: 200px;" id="profilepicture" src="{{profilepic.url}}">
+      <p>{{ sitter.first_name }} {{ sitter.last_name }}</p>
     {% empty %}
+      <img class="circle responsive-img" style="max-width: 150px;" id="profilepicture" src="/static/css/profilePlaceholder.png">
+      <p>{{ sitter.first_name }} {{ sitter.last_name }}</p>
       <div class="card-panel teal-text center-align">No profile picture</div>
-      <form action="{% url 'add_sitter_photo' sitter.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+      <form action="{% url 'add_sitter_profile' sitter.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
         {% csrf_token %}
         <input type="file" name="photo-file">
         <br><br>
@@ -17,20 +19,14 @@
       </form>
     {% endfor %}
   </div>
-
-
-
-
-
   
   <div class="row">
-    <div class="col s12 card">
+    <div class="col s8" >
       <div class="card-content">
-        <p>Name: {{ sitter.first_name }}</p>
+        <p>About: {{ sitter.about }}</p>
         <p>Location: {{ sitter.city }}</p>
         <p>Sit Count: {{ sitter.sit_count }}</p>
         <p>Pet Experience: {{ sitter.pet_experience }}</p>
-        <p>About: {{ sitter.about }}</p>
       </div>
       {% if user.sitter.id %}
         <div class="card-action">
@@ -39,14 +35,18 @@
         </div>
       {% endif %}
     </div>
-    <iframe width="450" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
-            &q=Space+Needle,{{sitter.city}}">
+    
+    <div class="col s2">
+      <iframe width="250" height="250" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAni-2dMS-1jCp_p8xumM82vShRZbY_CgU
+      &q=Space+Needle,{{sitter.city}}">
     </iframe>
   </div>
+</div>
+
   <div>
     <h5>Sitter Petcation Photos:</h5>
     {% for photo in sitter.sitterphoto_set.all %}
-      <img class="responsive-img card-panel" src="{{photo.url}}">
+      <img class="responsive-img" style="max-width: 250px; max-height: 250px;" src="{{photo.url}}">
     {% empty %}
       <div class="card-panel teal-text center-align">Add pictures of your Petcation experience</div>
     {% endfor %} 
@@ -60,5 +60,7 @@
     {% endif %}
   </div>
 
+  
 
+</main>
 {% endblock %}
