--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -25,8 +25,8 @@
     <div class="col s8 card">
       <div class="card-content">
         <p>Name: {{ owner.first_name }}</p>
-        <p>Location: {{ owner.city }}</p>
-        <p>About: {{ owner.about }}</p>
+        <p>Located in: {{ owner.city }}</p>
+        <p>About Me: {{ owner.about }}</p>
       </div>
       {% if user.owner.id %}
       <div class="card-action">
