--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -41,7 +41,7 @@
         <tr><th>Sitter Name</th><th>Available</th></tr>
       </thead>
       <tbody>
-        {% for interest in sitter.show_interest_set.all %}
+        {% for interest in sitter.showinterest_set.all %}
           <tr>
             <td>{{interest.sitter.first_name}}</td>
             <td>{{interest.get_is_interested_display}}</td>
