--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -10,6 +10,7 @@
       <img class="circle responsive-img" style="max-width: 150px;" id="profilepicture" src="/static/css/profilePlaceholder.png">
       <p>{{ owner.first_name }} {{ owner.last_name }}</p>
       <div class="card-panel teal-text center-align">No Prof Pic</div>
+      {% if user.owner.id %}
       <form action="{% url 'add_owner_profile' owner.id %}" enctype="multipart/form-data" method="POST"
         class="card-panel">
         {% csrf_token %}
@@ -17,6 +18,7 @@
         <br><br>
         <input type="submit" class="btn" value="Upload Profile Picture">
       </form>
+      {% endif %}
     {% endfor %}
   </div>
 
