--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -2,31 +2,29 @@
 {% block content %}
 <main class="container profile-page">
 
-  <div class="row">
-    <div class="col s12 m10">
-      <div class="card">
-        <div class="card-content">
-          <span class="card-title">
-            <a href="{% url 'owners_detail' post.owner.id %}">
-              <h4>
-                Pet Owner: {{ post.owner }}
-              </h4>
-            </a>
-          </span>
-            <p>Start Date: {{ post.start_date }}</p>
-            <p>End Date: {{ post.end_date }}</p>
-            <p>Details: {{ post.details }}</p>
-            <p>Email: <a href="mailto:{{ post.owner.user.email }}">{{ post.owner.user.email }}</a></p>
-          </div>
-        {% if user.owner.id %}
-        <div class="card-action">
-          <a href="{% url 'posts_update' post.id %}">Edit</a>
-          <a href="{% url 'posts_delete' post.id %}">Delete</a>
-        </div>
-        {% endif %}
-      </div>
+  
+  <div class="card-content">
+    <span class="card-title">
+      <a href="{% url 'owners_detail' post.owner.id %}">
+        <h4>
+          Pet Owner: {{ post.owner }}
+        </h4>
+      </a>
+    </span>
+      <p>Start Date: {{ post.start_date }}</p>
+      <p>End Date: {{ post.end_date }}</p>
+      <p>Details: {{ post.details }}</p>
+      <p>Email: <a href="mailto:{{ post.owner.user.email }}">{{ post.owner.user.email }}</a></p>
     </div>
-  </div> 
+  {% if user.owner.id %}
+  <div class="card-action">
+    <a href="{% url 'posts_update' post.id %}">Edit</a>
+    <a href="{% url 'posts_delete' post.id %}">Delete</a>
+  </div>
+  {% endif %}
+
+  <hr>
+ 
   <div class="card-action">   
     <h4>Available Sitters:</h4>
     <!-- Leaving the action empty makes the form post to the same url used to display it -->
@@ -35,7 +33,9 @@
       {% csrf_token %}
 
       {{ show_interest_form.as_p }}
+      
       <input type="submit" value="Submit" class="btn">
+    
     </form>
     <br> 
     <table class="striped">
@@ -46,7 +46,7 @@
         {% for interest in post.showinterest_set.all %}
           {% if interest.is_interested == 'Y' %}
             <tr>
-              <td>{{interest.sitter.first_name}}</td>
+              <td><a href="{% url 'sitters_detail' interest.sitter.id %}">{{interest.sitter.first_name}}</td></a>
               <td>{{interest.get_is_interested_display}}</td>
             </tr>
           {% endif %}
