--- a/main_app/templates/posts/index.html
+++ b/main_app/templates/posts/index.html
@@ -8,7 +8,8 @@
     <a href="{% url 'posts_detail' post.id %}">
       <div class="card petcation-card">
         <div class="card-content">
-          <span class="card-title">             
+          <i class="material-icons">pets</i>             
+          <span class="card-title">
               <h5 class="center-align">
                 Pet Owner: {{ post.owner }}
               </h5>
