--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 <main class="container profile-page">
-
-  
   <div class="card-content">
     <span class="card-title">
       <a href="{% url 'owners_detail' post.owner.id %}">
         <h4>
-          Pet Owner: {{ post.owner }}
+          Pet Owner - {{ post.owner }}
         </h4>
       </a>
     </span>
@@ -22,34 +20,42 @@
     <a href="{% url 'posts_delete' post.id %}">Delete</a>
   </div>
   {% endif %}
-
+  <br>
   <hr>
   
-  <div class="card-action">   
-    <h4>Available Sitters:</h4>
-    <!-- Leaving the action empty makes the form post to the same url used to display it -->
-    <form action="{% url 'show_interest' post.id %}" method="post">
-    <!-- Django requires the following for security purposes -->
-      {% csrf_token %}
-      {{ show_interest_form.as_p }}      
-      <input type="submit" value="Submit" class="btn">   
-    </form>
-    <br> 
-    <table class="striped">
-      <thead>
-        <tr><th>Sitter Name</th><th>Available</th></tr>
-      </thead>
-      <tbody>
-        {% for interest in post.showinterest_set.all %}
-          {% if interest.is_interested == 'Y' %}
-            <tr>
-              <td><a href="{% url 'sitters_detail' interest.sitter.id %}">{{interest.sitter.first_name}}</td></a>
-              <td>{{interest.get_is_interested_display}}</td>
-            </tr>
-          {% endif %}
-        {% endfor %}
-      </tbody>
-    </table> 
+  <div class="row">
+    <div class="col s6">
+      <div class="card-action">   
+        <h4>Available Sitters</h4>
+        <!-- Leaving the action empty makes the form post to the same url used to display it -->
+        {% if user.sitter.id %}
+        <form action="{% url 'show_interest' post.id %}" method="post">
+        <!-- Django requires the following for security purposes -->
+          {% csrf_token %}
+          {{ show_interest_form.as_p }}      
+          <input type="submit" value="Submit" class="btn">   
+        </form>
+        {% endif %}
+        <br> 
+        <table class="striped">
+          <thead>
+            <tr><th>Sitter Name</th><th>Available</th></tr>
+          </thead>
+          <tbody>
+            {% for interest in post.showinterest_set.all %}
+              {% if interest.is_interested == 'Y' %}
+                <tr>
+                  <td><a href="{% url 'sitters_detail' interest.sitter.id %}">
+                    {{interest.sitter.first_name}} {{interest.sitter.last_name}}
+                  </td></a>
+                  <td>{{interest.get_is_interested_display}}</td>
+                </tr>
+              {% endif %}
+            {% endfor %}
+          </tbody>
+        </table> 
+      </div>
+    </div>
   </div>
 </main>
 <script>
