--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<main class="container">
-    <h1>About Petcation</h1>
-    <hr />
-    <p>Providing love and care for all your best friends</p>
-
+<main class="container about-page">
+    <h1 class="center-align">Our Story</h1>
+    <hr>
+    <p>Petcation is a space for all pet lovers, owners and sitters alike. As pet owners, 
+        we often reach out to our closest, most trusted friends to care for our loving pets.
+        Our friends are also happy to care for your pets when time permits for them. Without
+        the pressure and obligation to ask (and respond), Petcation allows pet owners to post 
+        petcations. Our friends are then able to see available dates and 
+        respond to pet sit voluntarily. Most importantly, our loving pets get a chance to 
+        take a "petcation" with our friends!!
+    </p>
+    <p><i>“Pets are humanizing. They remind us we have an obligation and responsibility to preserve 
+        and nurture and care for all life.”</i> – James Cromwell
+    </p>
 </main>
 
 {% endblock %}
