--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<main class="container profile-page">
+
+<main class="container petcation-page">
   <div class="card-content">
     <span class="card-title">
       <a href="{% url 'owners_detail' post.owner.id %}">
@@ -63,4 +64,5 @@
   var selectEl = document.getElementById('id_is_interested');
   M.FormSelect.init(selectEl);
 </script>
+
 {% endblock %}
