some style changes

--- a/main_app/templates/sitters/detail.html
+++ b/main_app/templates/sitters/detail.html
@@ -5,7 +5,7 @@
   <br>
   <div class="col s12" style="text-align: center;">
     {% for profilepic in sitter.sitterprofile_set.all %}
-      <img class="circle responsive-img" style="max-width: 200px; max-height: 200px;" id="profilepicture" src="{{profilepic.url}}">
+      <img class="circle responsive-img" style="max-width: 250px; max-height: 250px; min-width: 250px; min-height: 250px;" id="profilepicture" src="{{profilepic.url}}">
       <p>{{ sitter.first_name }} {{ sitter.last_name }}</p>
     {% empty %}
       <img class="circle responsive-img" style="max-width: 150px;" id="profilepicture" src="/static/css/profilePlaceholder.png">
