--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: rgb(248, 247, 242);
+    font-family: 'Lato', sans-serif;
   }
   
 main {
@@ -24,7 +24,7 @@ nav {
 }
 
 a {
-    color: rgb(238, 115, 42);  
+    color: rgb(95, 59, 45);  
 }
 
 
