--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -5,13 +5,13 @@
   <br>
   <div class="col s12" style="text-align: center;">
     {% for profilepic in owner.ownerprofile_set.all %}
-    <img class="responsive-img" style="max-width: 175px;" src="{{profilepic.url}}">
+    <img class="circle responsive-img" style="max-width: 250px; max-height: 250px; min-width: 250px; min-height: 250px;" src="{{profilepic.url}}">
     <p>{{ owner.first_name }} {{ owner.last_name }}</p>
     {% empty %}
     <img class="circle responsive-img" style="max-width: 150px;" id="profilepicture"
       src="/static/css/profilePlaceholder.png">
     <p>{{ owner.first_name }} {{ owner.last_name }}</p>
-    <div class="card-panel teal-text center-align">No Prof Pic</div>
+    <div class="card-panel teal-text center-align">No Profile Pic</div>
     {% if user.owner.id %}
     <form action="{% url 'add_owner_profile' owner.id %}" enctype="multipart/form-data" method="POST"
       class="card-panel">
