add materialize script at top of base.html to render yes/no select menu on post details

--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -56,9 +56,11 @@
       </div>
     </div>
   </div>
+  
 </main>
 <script>
   var selectEl = document.getElementById('id_is_interested');
+  console.log(selectEl)
   M.FormSelect.init(selectEl);
 </script>
 
