style petcation app

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -15,6 +15,7 @@
     <p><i>“Pets are humanizing. They remind us we have an obligation and responsibility to preserve 
         and nurture and care for all life.”</i> – James Cromwell
     </p>
+    <img src="/static/css/bunny photo.webp" alt="">
 </main>
 
 {% endblock %}
