--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,7 +6,7 @@
     <div class="center-align home-page">
       <h3>
         Providing love and care for <strong>ALL</strong> your 
-        <span style="color: rgb(244, 74, 9)">BEST FRIENDS</span>
+        <span style="color: rgb(150, 144, 103);">BEST FRIENDS</span>
       </h3>
     </div>
   </div>
