--- a/main_app/templates/posts/index.html
+++ b/main_app/templates/posts/index.html
@@ -10,8 +10,8 @@
         <div class="card-content">
           <i class="material-icons">pets</i>             
           <span class="card-title">
-              <h5 class="center-align">
-                Pet Owner: {{ post.owner }}
+              <h5 class="center-align post-card-title">
+                Pet Owner | {{ post.owner }}
               </h5>
           </span>
           <p>{{ post.start_date }} - {{ post.end_date }}</p>
