--- a/main_app/templates/owners/detail.html
+++ b/main_app/templates/owners/detail.html
@@ -5,10 +5,10 @@
   <br>
   <div class="col s12" style="text-align: center;">
     {% for profilepic in owner.ownerprofile_set.all %}
-    <img class="circle responsive-img" style="max-width: 250px; max-height: 250px; min-width: 250px; min-height: 250px;" src="{{profilepic.url}}">
-    <p>{{ owner.first_name }} {{ owner.last_name }}</p>
+    <img class="circle responsive-img profile-image" style="max-width: 250px; max-height: 250px; min-width: 250px; min-height: 250px;" src="{{profilepic.url}}">
+    <p class="profile-name">{{ owner.first_name }} {{ owner.last_name }}</p>
     {% empty %}
-    <img class="circle responsive-img" style="max-width: 150px;" id="profilepicture"
+    <img class="circle responsive-img profile-image" style="max-width: 150px;" id="profilepicture"
       src="/static/css/profilePlaceholder.png">
     <p>{{ owner.first_name }} {{ owner.last_name }}</p>
     <div class="card-panel teal-text center-align">No Profile Pic</div>
@@ -25,16 +25,17 @@
   </div>
 
   <div class="row">
-    <div class="col s8 card">
+    <div class="col s8">
       <div class="card-content">
         <p>Name: {{ owner.first_name }}</p>
         <p>Location: {{ owner.city }}</p>
+        <p>Email: {{ owner.email }}</p>
         <p>About: {{ owner.about }}</p>
       </div>
       {% if user.owner.id %}
       <div class="card-action">
-        <a href="{% url 'owners_update' owner.id %}">Edit</a>
-        <a href="{% url 'owners_delete' owner.id %}">Delete</a>
+        <a href="{% url 'owners_update' owner.id %}" class="form-links">Edit</a>
+        <a href="{% url 'owners_delete' owner.id %}" class="form-links">Delete</a>
       </div>
       {% endif %}
     </div>
@@ -46,21 +47,23 @@
   </div>
 
   <h3>Pet List</h3>
-  {% for pet in owner.pet_set.all %}
-  <a href="{% url 'pets_detail' pet.id %}">
-    <div class="card">
-      <div class="card-content">
-        <span class="card-title">{{ pet.name }}</span>
-        <p>Type: {{ pet.pet_type }}</p>
-        <p>Breed: {{ pet.breed }}</p>
-        <p>Age: {{ pet.age }}</p>
-        <p>Gender: {{ pet.gender }}</p>
+  <div class="flex-display">
+    {% for pet in owner.pet_set.all %}
+    <a href="{% url 'pets_detail' pet.id %}">
+      <div class="card pet-cards">
+        <div class="card-content">
+          <span class="card-title">{{ pet.name }}</span>
+          <p>Type: {{ pet.pet_type }}</p>
+          <p>Breed: {{ pet.breed }}</p>
+          <p>Age: {{ pet.age }}</p>
+          <p>Gender: {{ pet.gender }}</p>
+        </div>
       </div>
-    </div>
-  </a>
-  {% endfor %}
+    </a>
+    {% endfor %}
+  </div>
   {% if user.owner.id %}
-  <a href="{% url 'pets_create' owner.id %}">Add Pet</a>
+  <a href="{% url 'pets_create' owner.id %}" class="form-links">Add Pet</a>
   {% endif %}
   <br>
 
